syntax = "proto3";

option java_multiple_files = true;

package keymanager;

message KeyRequest {}

message KeyResponse {
  string key = 1;
}

service KeyGeneratorService {
  rpc GenerateKey(KeyRequest) returns (KeyResponse);
}
